--- a/public/css/global.css
+++ b/public/css/global.css
@@ -70,7 +70,7 @@
     padding: 20px 20px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: .5fr 2fr;
+    grid-template-rows: .5fr 2.5fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
@@ -95,7 +95,7 @@
     grid-area: 2 / 1 / 3 / 2; 
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 1fr;
+    grid-template-rows: .5fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     padding: 20px 100px;
@@ -125,8 +125,8 @@
 #footlink{
     text-decoration: none;
     color:#f2f2f2;
-    font-size: 16px;
-    padding: 10px 10px 40px 0;
+    font-size: 13px;
+    padding: 10px 0px 5px 0;
     font-weight: 600;
 }
 
@@ -136,20 +136,35 @@
 }
 
 .foottitle{
-    font-size: 15px;
+    font-size: 11px;
     color: #f2f2f2;
-    padding: 30px 0px;
+    padding: 10px 0;
 }
 
 .footerhome #footlinkh{
     text-decoration: none;
     color:#f2f2f2;
-    font-size: 16px;
-    padding: 30px 10px 10px 0;
+    font-size: 17px;
+    padding: 10px 0;
     font-weight: 600;
 }
 
 .footerhome #footlinkh:hover{
     color: #EDD7B7;
     transition: .2ms;
+}
+
+.dot{
+    height: 40px;
+    width: 40px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    margin-top: 15px;
+    margin-right: 10px;
+}
+
+.dot:hover{
+    color: rgba(255, 255, 255, 1);
+    box-shadow: 0 5px 15px rgba(28, 126, 95, 0.835);
 }
