--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,7 +1,62 @@
+/* -------------------- Globals -------------------- */
+
 *{
     margin: 0;
     font-family: "Actor", sans-serif;
 }
+
+button {
+    outline: none;
+    color: white;
+    padding: .5em;
+    padding-left: 2em;
+    padding-right: 2em;
+    border: 2px dashed #567e6b;
+    border-radius: 5px;
+    background-color: #7BB599;
+    box-shadow: 0 0 0 4px #7BB599, 2px 2px 4px 2px rgba(0, 0, 0, 0.5);
+    transition: .1s ease-in-out, .4s color;
+    font-size: 15px;
+}
+
+button:active {
+    transform: translateX(-0.1em) translateY(0.1em);
+    box-shadow: 0 0 0 4px #7BB599, 1.5px 1.5px 2.5px 1.5px rgba(0, 0, 0, 0.5);
+}
+
+button:hover {
+    background-color: #8bcfae;
+    box-shadow: 0 0 0 4px #8bcfae, 2px 2px 4px 2px rgba(0, 0, 0, 0.5);
+}
+
+.bannertitle{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("images/croissantandstrawberry.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    height: 15rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-top: 8rem;
+}
+
+
+.bannertext h1{
+    font-family: "Jomhuria", serif;
+    font-size: 5rem;
+    font-weight: 500;
+    color:#f2f2f2;
+
+}
+
+.bannerbutton{
+    grid-area: 2 / 1 / 3 / 2;
+}
+
+
+
 
 /* -------------------- navbar -------------------- */
 
@@ -64,6 +119,7 @@
 }
 
 
+/* -------------------- footer -------------------- */
 
 .foot{
     background-color: #7BB599;
