--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,3 +1,4 @@
+
 /* -------------------- Globals -------------------- */
 
 *{
@@ -836,3 +837,95 @@ a:hover{
 label{
     color: #567e6b;
 }
+
+
+.cardmeals{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 2rem;
+}
+
+.cardmeals a{
+    text-decoration: none;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 190px;
+    height: 254px;
+    perspective: 1000px;
+    font-family: sans-serif;
+    margin: 0 20px;
+
+  }
+
+
+  
+  .title {
+    font-size: 1.5em;
+    font-weight: 500;
+    text-align: center;
+    margin: 0;
+    color: #fff;
+  }
+
+  .flip-card p{
+    color:#fff ;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    box-shadow: 0 8px 14px 0 rgba(0,0,0,0.2);
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border: 1px solid coral;
+    border-radius: 1rem;
+  }
+  
+  .flip-card-front {
+    background: rgba(0, 0, 0, 0.25);
+  }
+  
+  .flip-card-back {
+    background: linear-gradient(120deg, rgb(255, 174, 145) 30%, coral 88%,
+       bisque 40%, rgb(255, 185, 160) 78%);
+    color: white;
+    transform: rotateY(180deg);
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    min-width: 160px;
+    padding: 12px 16px;
+}
+
+.dropdown-link {
+    cursor: pointer;
+    position: relative;
+}
+
