--- a/public/css/global.css
+++ b/public/css/global.css
@@ -957,4 +957,87 @@ label{
     cursor: pointer;
 }
 
+/* -------------------- dashboard -------------------- */
 
+.dashcontent{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: .3fr repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+.dashtitle{
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+.dashmainnav{
+    grid-area: 2 / 1 / 3 / 2;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    margin-left: 2rem;
+}
+
+.dashhelplinks{
+    grid-area: 3 / 1 / 4 / 2;
+}
+
+.square-link {
+    display: flex;
+    justify-content: center;
+    align-items: center; /* Make the link block level */
+    width: 90%; /* Set the width of the square */
+    height: 90%; /* Set the height of the square */
+    background-color: #8bcfae; /* Set a background color */
+    color: white; /* Set the text color */
+    text-align: center; /* Center the text horizontally */
+    text-decoration: none; /* Remove underline from the link */
+}
+
+.square-link:hover{
+    background-color: #567e6b;
+    transition: 2ms;
+}
+
+.square-link div {
+    line-height: 100px; /* Center the text vertically */
+}
+
+.monlink{
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+.tuelink{
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.wedlink{
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.thurlink{
+    grid-area: 2 / 1 / 3 / 2;
+}
+
+.frilink{
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.satlink{
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+.sunlink{
+    grid-area: 3 / 1 / 4 / 2;
+}
+
+.recipedash{
+    grid-area: 3 / 2 / 4 / 3;
+}
+
+.logoutdash{
+    grid-area: 3 / 3 / 4 / 4;
+}
