--- a/public/css/global.css
+++ b/public/css/global.css
@@ -965,6 +965,7 @@ label{
     grid-template-rows: .3fr repeat(2, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    text-align: center;
 }
 
 .dashtitle{
@@ -972,13 +973,11 @@ label{
 }
 
 .dashmainnav{
-    grid-area: 2 / 1 / 3 / 2;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr;
+    grid-template-rows: .2fr 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    margin-left: 2rem;
 }
 
 .dashhelplinks{
@@ -1040,4 +1039,31 @@ label{
 
 .logoutdash{
     grid-area: 3 / 3 / 4 / 4;
+}
+
+.dashtitle h1{
+    font-family: "Jomhuria";
+    font-weight: 500;
+    font-size: 5rem;
+    color: #7BB599;
+    margin: 1.5rem;
+}
+
+.linkstitle{
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+.linkstitle h2{
+    color: #567e6b;
+    margin: 1rem;
+}
+
+.linkslinks{
+    grid-area: 2 / 1 / 3 / 2;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    margin-left: 2rem;
 }
