--- a/public/css/global.css
+++ b/public/css/global.css
@@ -640,7 +640,7 @@ a:hover{
     text-align: center;
     padding-top: 8rem;
     margin: 0 5rem;
-    margin-bottom: 10rem;
+    margin-bottom: 2rem;
 }
 
 
@@ -653,6 +653,10 @@ a:hover{
 
 .bannerbutton{
     grid-area: 2 / 1 / 3 / 2;
+}
+
+.collage{
+    margin-bottom: 10rem;
 }
 
 .mindcollage{
@@ -1090,3 +1094,32 @@ label{
     font-size: 2rem;
 }
 
+.form-container {
+    display: flex;
+    justify-content: space-between; /* Space between the two forms */
+    align-items: center; /* Align items vertically */
+    margin-bottom: 20px; /* Provide some space below the forms */
+}
+
+.day-select-form {
+    flex-grow: 1; /* Allows the dropdown form to take necessary space */
+    margin: 2rem;
+
+}
+
+.input1{
+    border: none;
+    border-bottom: 1px solid #567e6b;
+    width: 20%;
+    height: 1.7rem;
+    margin-bottom: 1rem;
+    background-color: #f7f7f7;
+    color: #7BB599;
+    font-size: medium;
+}
+
+.clear-plan-form {
+    flex-grow: 1; /* Allows the clear button form to take necessary space */
+    text-align: right; /* Aligns the clear button to the right */
+    margin: 2rem;
+}
